--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^7.2",
 
-        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-bundle": "^1.6|^2.0",
         "friendsofsymfony/rest-bundle": "^2.1",
         "jms/serializer-bundle": "^2.0",
         "stof/doctrine-extensions-bundle": "^1.2",
